# ChangeLog for dev-util/gperf
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.28 2006/12/11 07:32:05 beu Exp $

  11 Dec 2006; Elfyn McBratney <beu@gentoo.org> gperf-2.7.2.ebuild,
  gperf-3.0.1.ebuild:
  Kill redundant *DEPEND.

  10 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  gperf-3.0.1.ebuild:
  Add ~x86-fbsd keyword.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> gperf-3.0.1.ebuild:
  stable on ia64

  16 Jun 2005; Mark Loeser <halcy0n@gentoo.org>
  +files/gperf-3.0.1-gcc4.patch, gperf-3.0.1.ebuild:
  Added patch to fix compilation with gcc-4.0, thanks to Chen Xiangyang
  <chenxy@opencjk.org> ; bug #95835

  13 May 2005; Bryan Østergaard <kloeri@gentoo.org> gperf-3.0.1.ebuild:
  ~ia64 keyword.

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  06 Aug 2004; Guy Martin <gmsoft@gentoo.org> gperf-3.0.1.ebuild:
  Stable on hppa.

  17 Jul 2004; Tom Gall <tgall@gentoo.org> gperf-3.0.1.ebuild:
  stable on ppc64, bug #55804

  05 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> gperf-2.7.2.ebuild:
  Fix depend (bug #56184); don't assign default to S

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> gperf-2.7.2.ebuild,
  gperf-3.0.1.ebuild:
  virtual/glibc -> virtual/libc

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> gperf-3.0.1.ebuild:
  Stable on mips

  06 Jun 2004; Daniel Black <dragonheart@gentoo.org> gperf-3.0.1.ebuild,
  gperf-2.7.2.ebuild:
  QA - IUSE and S=

  03 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> gperf-3.0.1.ebuild:
  Stable on alpha.

  05 May 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  gperf-2.7.2.ebuild:
  QA Fix to docdir. Fixed bug #46565

  29 Apr 2004; Ferris McCormick <fmccor@gentoo.org> gperf-3.0.1.ebuild:
  Stable on sparc.

  28 Apr 2004; Jon Portnoy <avenj@gentoo.org> gperf-3.0.1.ebuild :
  Stable on x86 and AMD64.
