@@ -1,0 +1,3 @@
+MD5 5359fae9929f9f7235c6601f4b6e8c89 gperf-3.0.2.tar.gz 843904
+RMD160 154d599d97e03a6a60dd844751f48a86760d69aa gperf-3.0.2.tar.gz 843904
+SHA256 bc825cafc8a597983db1b44e86bc6399430f67f2a8633e6cdcf8fbf200186bf7 gperf-3.0.2.tar.gz 843904
