@@ -4,6 +4,5 @@
 	<herd>no-herd</herd>
 	<maintainer>
 		<email>beu@gentoo.org</email>
-		<description>This package lacks a primary herd or maintainer.</description>
 	</maintainer>
 </pkgmetadata>
