@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/gperf
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.28 2006/12/11 07:32:05 beu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.29 2006/12/17 23:20:20 beu Exp $
+
+*gperf-3.0.2 (17 Dec 2006)
+
+  17 Dec 2006; Elfyn McBratney <beu@gentoo.org> metadata.xml,
+  +gperf-3.0.2.ebuild:
+  Version bump.
 
   11 Dec 2006; Elfyn McBratney <beu@gentoo.org> gperf-2.7.2.ebuild,
   gperf-3.0.1.ebuild:
